# nodejs/projects/FS-StockApp/server/_projectStarter/src/models/purchase.js
@@ -1,55 +1,0 @@
-"use strict"
-/* -------------------------------------------------------
-    | FULLSTACK TEAM | NODEJS / EXPRESS |
-------------------------------------------------------- */
-const { mongoose } = require('../configs/dbConnection')
-/* ------------------------------------------------------- */
-
-const purchaseSchema = new mongoose.Schema({
-
-    userId: {
-        type: mongoose.Schema.Types.ObjectId,
-        ref: 'User',
-        required: true
-    },
-
-    firmId: {
-        type: mongoose.Schema.Types.ObjectId,
-        ref: 'Firm',
-        required: true
-    },
-
-    brandId: {
-        type: mongoose.Schema.Types.ObjectId,
-        ref: 'Brand',
-        required: true
-    },
-
-    productId: {
-        type: mongoose.Schema.Types.ObjectId,
-        ref: 'Product',
-        required: true
-    },
-
-    quantity: {
-        type: Number,
-        required: true
-    },
-
-    price: {
-        type: Number,
-        required: true
-    },
-
-    priceTotal: {
-        type: Number,
-        set: function () { return this.quantity * this.price }, // only works if this field is sent
-        default: function () { return this.quantity * this.price }, // works on create
-        transform: function () { return this.quantity * this.price } // works on update
-    }
-}, {
-    collection: 'purchases',
-    timestamps: true
-});
-
-module.exports = mongoose.model("Purchase", purchaseSchema);
