# nodejs/projects/FS-StockApp/server/_projectStarter/src/routes/purchase.js
@@ -1,14 +1,0 @@
-"use strict"
-/* -------------------------------------------------------
-    | FULLSTACK TEAM | NODEJS / EXPRESS |
-------------------------------------------------------- */
-const router = require('express').Router()
-/* ------------------------------------------------------- */
-
-const { list, create, read, update, deletee } = require('../controllers/purchase');
-
-router.route('/').get(list).post(create);
-
-router.route('/:id').get(read).put(update).patch(update).delete(deletee);
-
-module.exports = router;
